[package]
name = "kwctl"
description = "Tool to manage Kubewarden policies"
version = "1.5.2"
authors = [
        "Kubewarden Developers <kubewarden@suse.de>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap_complete = "4.5.48"
clap = { version = "4.5.37", features = [ "cargo", "env" ] }
directories = "6.0.0"
flate2 = "1.1.1"
itertools = "0.14.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["v1_25"] }
lazy_static = "1.5.0"
# It's necessary to set the "static" feature in mdcat to avoid the usage of 
# native-ssl. Using the rustls instead. Otherwise, the build will fail due the 
# missing OpenSSL lib.
mdcat = { version = "2.7.1", default-features = false, features = ["static"] }
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.6.1" }
pretty-bytes = "0.2.2"
prettytable-rs = "^0.10"
pulldown-cmark = { version = "0.13.0", default-features = false }
regex = "1.11.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
syntect = { version = "5.2.0" , default-features = false, features = ["parsing"] }
tar = "0.4.44"
tiny-bench = "0.4.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
url = "2.5.4"
walrus = "0.19.0"
wasmparser = "0.99"

# This is required to have reqwest built using the `rustls-tls-native-roots`
# feature across all the transitive dependencies of kwctl
# This is required to have kwctl use the system certificates instead of the
# ones bundled inside of rustls
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls-native-roots"] }

[dev-dependencies]
rstest = "0.16.0"
tempfile = "3.3.0"
